# win-alt-remap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: generate_assets.py
src/: app.rc  main.cpp
